fix planetary alignment

--- a/public/main.css
+++ b/public/main.css
@@ -17,6 +17,7 @@ body {
 
 .planets {
   max-width: 1400px;
+  margin: 0 auto;
   text-align: center;
 }
 
